# commercial_area_analysis

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260629_0001_initial.py  20260629_0002_phase2_sources.py
apps/api/app/: main.py
apps/api/app/adapters/: mock_source.py
apps/api/app/analysis/: geometry.py  methodology.py  metrics.py  recommendations.py  scoring.py
apps/api/app/api/: routes.py
apps/api/app/bootstrap/: mock_seed.py  sample_seed.py
apps/api/app/core/: config.py
apps/api/app/db/: models.py  session.py
apps/api/app/domain/: payloads.py  records.py
apps/api/app/ingest/: __init__.py  __main__.py  cli.py  stores.py
apps/api/app/reporting/: report_payload.py
apps/api/app/repositories/: analysis.py  catalog.py
apps/api/app/schemas/: analysis.py  catalog.py  geo.py
apps/api/app/services/: analysis_service.py  geo_service.py
apps/api/tests/: conftest.py  test_config.py  test_mock_seed.py  test_phase2_metadata.py  test_phase2_sample_seed.py  test_session.py
apps/api/tests/adapters/: test_geo_provider.py  test_phase2_sources.py
apps/api/tests/analysis/: test_metric_calculator.py  test_scoring.py
apps/api/tests/api/: test_analysis_endpoints.py  test_geo_endpoints.py
apps/api/tests/ingest/: test_stores_ingest.py
apps/api/tests/reporting/: test_report_payload.py
apps/api/tests/repositories/: test_catalog.py
docs/: data-coverage.md  (+12 more)
(+63 files in other folders)
