[project]
name = "commercial-area-analysis-api"
version = "0.1.0"
description = "FastAPI backend for commercial area analysis MVP"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.116.0",
  "geoalchemy2>=0.18.0",
  "orjson>=3.10.0",
  "pydantic-settings>=2.10.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.41",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31.0",
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.basedpyright]
typeCheckingMode = "basic"
include = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"../../scripts/seed_mock_data.py" = ["E402"]
"../../scripts/export_mock_geojson.py" = ["E402"]
